impr: no keyboard layout OSD on switching between windows

now if two windows have different layouts, there will be no OSD on
switching between them on Alt+Tab

GUI:
DIGEST:
BUG: 418699